--- a/bootstrap/root.yaml
+++ b/bootstrap/root.yaml
@@ -6,11 +6,9 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/sangtd05/gitops-repo
+    repoURL: https://github.com/sangtd05/gitops-repo.git
     targetRevision: main
     path: infrastructure
-    directory:
-      recurse: true
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
