--- a/infrastructure/traefik.yaml
+++ b/infrastructure/traefik.yaml
@@ -22,23 +22,30 @@ spec:
           type: ClusterIP
         ports:
           web:
-            port: 8000
+            port: 80
             hostPort: 80
             expose:
               default: true
             protocol: TCP
           websecure:
-            port: 8443
+            port: 443
             hostPort: 443
             expose:
               default: true
-            protocol: TCP 
+            protocol: TCP
+        securityContext:
+          capabilities:
+            drop: [ALL]
+            add: [NET_BIND_SERVICE]
+          runAsNonRoot: true
+          runAsUser: 65532
+          runAsGroup: 65532
         ingressClass:
           enabled: true
           isDefaultClass: true
         ingressRoute:
           dashboard:
-            enabled: false 
+            enabled: false
         providers:
           kubernetesCRD:
             enabled: true
