fix; traeflix conflic volume data

--- a/infrastructure/traefik.yaml
+++ b/infrastructure/traefik.yaml
@@ -16,6 +16,8 @@ spec:
         deployment:
           kind: Deployment
           replicas: 1
+        persistence:
+          enabled: false
         hostNetwork: true
         service:
           enabled: true
