fix; local path for traefik

--- a/infrastructure/traefik.yaml
+++ b/infrastructure/traefik.yaml
@@ -17,7 +17,12 @@ spec:
           kind: Deployment
           replicas: 1
         persistence:
-          enabled: false
+          enabled: true
+          name: ssl-certs
+          storageClass: "local-path"
+          accessMode: ReadWriteOnce
+          size: 128Mi
+          path: /certs
         hostNetwork: true
         service:
           enabled: true
@@ -34,7 +39,7 @@ spec:
             hostPort: 443
             expose:
               default: true
-            protocol: TCP 
+            protocol: TCP
         securityContext:
           capabilities:
             drop: [ALL]
@@ -59,14 +64,6 @@ spec:
           - "--certificatesresolvers.myresolver.acme.email=sangtd2005@gmail.com"
           - "--certificatesresolvers.myresolver.acme.storage=/certs/acme.json"
           - "--certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web"
-        volumes:
-          - name: cert-store
-            hostPath:
-              path: /opt/traefik/data
-              type: DirectoryOrCreate
-        additionalVolumeMounts:
-          - name: cert-store
-            mountPath: /certs
   destination:
     server: https://kubernetes.default.svc
     namespace: kube-system
