upd; traefik sync

--- a/infrastructure/traefik.yaml
+++ b/infrastructure/traefik.yaml
@@ -16,6 +16,7 @@ spec:
         deployment:
           kind: Deployment
           replicas: 1
+
         persistence:
           enabled: true
           name: ssl-certs
@@ -23,10 +24,15 @@ spec:
           accessMode: ReadWriteOnce
           size: 128Mi
           path: /certs
+          annotations:
+            argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+
         hostNetwork: true
+
         service:
           enabled: true
           type: ClusterIP
+
         ports:
           web:
             port: 80
@@ -40,6 +46,7 @@ spec:
             expose:
               default: true
             protocol: TCP
+
         securityContext:
           capabilities:
             drop: [ALL]
@@ -47,12 +54,15 @@ spec:
           runAsNonRoot: true
           runAsUser: 65532
           runAsGroup: 65532
+
         ingressClass:
           enabled: true
           isDefaultClass: true
+
         ingressRoute:
           dashboard:
             enabled: false
+
         providers:
           kubernetesCRD:
             enabled: true
@@ -60,16 +70,21 @@ spec:
             enabled: true
             publishedService:
               enabled: false
+
         additionalArguments:
           - "--certificatesresolvers.myresolver.acme.email=sangtd2005@gmail.com"
           - "--certificatesresolvers.myresolver.acme.storage=/certs/acme.json"
           - "--certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web"
+
   destination:
     server: https://kubernetes.default.svc
     namespace: kube-system
+
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+      - PrunePropagationPolicy=foreground
+      - PruneLast=true
