--- a/infrastructure/traefik.yaml
+++ b/infrastructure/traefik.yaml
@@ -24,25 +24,20 @@ spec:
           accessMode: ReadWriteOnce
           size: 128Mi
           path: /certs
-          annotations:
-            argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
-
-        hostNetwork: true
+        hostNetwork: false
 
         service:
           enabled: true
-          type: ClusterIP
+          type: LoadBalancer
 
         ports:
           web:
             port: 80
-            hostPort: 80
             expose:
               default: true
             protocol: TCP
           websecure:
             port: 443
-            hostPort: 443
             expose:
               default: true
             protocol: TCP
@@ -54,14 +49,6 @@ spec:
           runAsNonRoot: true
           runAsUser: 65532
           runAsGroup: 65532
-
-        additionalVolumeMounts:
-          - name: data
-            mountPath: /data
-
-        volumes:
-          - name: data
-            emptyDir: {}
 
         ingressClass:
           enabled: true
@@ -77,7 +64,7 @@ spec:
           kubernetesIngress:
             enabled: true
             publishedService:
-              enabled: false
+              enabled: true  # Quan trọng!
 
         additionalArguments:
           - "--certificatesresolvers.myresolver.acme.email=sangtd2005@gmail.com"
@@ -94,4 +81,3 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
-      - PrunePropagationPolicy=foreground
