--- a/infrastructure/traefik.yaml
+++ b/infrastructure/traefik.yaml
@@ -24,31 +24,37 @@ spec:
           accessMode: ReadWriteOnce
           size: 128Mi
           path: /certs
-        hostNetwork: false
+
+        hostNetwork: true
 
         service:
           enabled: true
-          type: LoadBalancer
+          type: ClusterIP
 
         ports:
           web:
             port: 80
+            hostPort: 80
             expose:
               default: true
             protocol: TCP
           websecure:
             port: 443
+            hostPort: 443
             expose:
               default: true
             protocol: TCP
 
+        podSecurityContext:
+          fsGroup: 0
+
         securityContext:
+          runAsNonRoot: false
+          runAsUser: 0
+          runAsGroup: 0
           capabilities:
             drop: [ALL]
-            add: [NET_BIND_SERVICE]
-          runAsNonRoot: true
-          runAsUser: 65532
-          runAsGroup: 65532
+            add: [NET_BIND_SERVICE, CHOWN, SETUID, SETGID]
 
         ingressClass:
           enabled: true
@@ -64,7 +70,7 @@ spec:
           kubernetesIngress:
             enabled: true
             publishedService:
-              enabled: true  # Quan trọng!
+              enabled: false
 
         additionalArguments:
           - "--certificatesresolvers.myresolver.acme.email=sangtd2005@gmail.com"
