--- a/manifests/argocd-network/ingress.yaml
+++ b/manifests/argocd-network/ingress.yaml
@@ -15,7 +15,7 @@ spec:
   entryPoints:
     - web
   routes:
-    - match: Host(`sangtd.duckdns.org`)
+    - match: Host(`argocd.sangtd.duckdns.org`)
       kind: Rule
       services:
         - name: argocd-server
