--- a/infrastructure/traefik.yaml
+++ b/infrastructure/traefik.yaml
@@ -16,6 +16,13 @@ spec:
         deployment:
           kind: Deployment
           replicas: 1
+          initContainers:
+            - name: volume-permissions
+              image: busybox:latest
+              command: ["sh", "-c", "touch /certs/acme.json && chmod 600 /certs/acme.json && chown 65532:65532 /certs/acme.json"]
+              volumeMounts:
+                - name: ssl-certs
+                  mountPath: /certs
 
         persistence:
           enabled: true
@@ -26,7 +33,6 @@ spec:
           path: /certs
 
         hostNetwork: true
-
         service:
           enabled: true
           type: ClusterIP
@@ -45,16 +51,13 @@ spec:
               default: true
             protocol: TCP
 
-        podSecurityContext:
-          fsGroup: 0
-
         securityContext:
-          runAsNonRoot: false
-          runAsUser: 0
-          runAsGroup: 0
           capabilities:
             drop: [ALL]
-            add: [NET_BIND_SERVICE, CHOWN, SETUID, SETGID]
+            add: [NET_BIND_SERVICE]
+          runAsNonRoot: true
+          runAsUser: 65532
+          runAsGroup: 65532
 
         ingressClass:
           enabled: true
@@ -80,7 +83,6 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: kube-system
-
   syncPolicy:
     automated:
       prune: true
