--- a/infrastructure/traefik.yaml
+++ b/infrastructure/traefik.yaml
@@ -19,7 +19,7 @@ spec:
           initContainers:
             - name: volume-permissions
               image: busybox:latest
-              command: ["sh", "-c", "touch /certs/acme.json && chmod 600 /certs/acme.json && chown 65532:65532 /certs/acme.json"]
+              command: ["sh", "-c", "touch /certs/acme.json && chmod 600 /certs/acme.json"]
               volumeMounts:
                 - name: ssl-certs
                   mountPath: /certs
@@ -54,10 +54,10 @@ spec:
         securityContext:
           capabilities:
             drop: [ALL]
-            add: [NET_BIND_SERVICE]
-          runAsNonRoot: true
-          runAsUser: 65532
-          runAsGroup: 65532
+            add: [NET_BIND_SERVICE, CHOWN, SETUID, SETGID]
+          runAsNonRoot: false
+          runAsUser: 0
+          runAsGroup: 0
 
         ingressClass:
           enabled: true
