--- a/manifests/argocd-network/ingress.yaml
+++ b/manifests/argocd-network/ingress.yaml
@@ -20,8 +20,8 @@ spec:
       services:
         - name: argocd-server
           port: 80
-      middlewares:
-        - name: https-redirect
+      # middlewares:
+      #   - name: https-redirect
 ---
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
