--- a/infrastructure/traefik.yaml
+++ b/infrastructure/traefik.yaml
@@ -16,15 +16,6 @@ spec:
         deployment:
           kind: Deployment
           replicas: 1
-          initContainers:
-            - name: volume-permissions
-              image: busybox:latest
-              command: ["sh", "-c", "touch /certs/acme.json && chmod 600 /certs/acme.json && chown 0:0 /certs/acme.json"]
-              volumeMounts:
-                - name: ssl-certs
-                  mountPath: /certs
-
-        podSecurityContext: {}
 
         persistence:
           enabled: true
@@ -58,7 +49,11 @@ spec:
           runAsUser: 0
           runAsGroup: 0
           capabilities:
-            add: [NET_BIND_SERVICE]-
+            add: 
+              - NET_BIND_SERVICE
+              - CHOWN
+              - SETUID
+              - SETGID
 
         ingressClass:
           enabled: true
