--- a/manifests/argocd-network/ingress.yaml
+++ b/manifests/argocd-network/ingress.yaml
@@ -15,13 +15,14 @@ spec:
   entryPoints:
     - web
   routes:
-    - match: Host(`argocd.sangtd.duckdns.org`)
+    - match: Host(`sangtd.duckdns.org`)
       kind: Rule
       services:
         - name: argocd-server
           port: 80
-      # middlewares:
-      #   - name: https-redirect
+      middlewares:
+        - name: https-redirect
+          namespace: argocd
 ---
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
@@ -32,7 +33,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`argocd.sangtd.duckdns.org`)
+    - match: Host(`sangtd.duckdns.org`)
       kind: Rule
       services:
         - name: argocd-server
