--- a/manifests/headlamp/admin-user.yaml
+++ b/manifests/headlamp/admin-user.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: headlamp-admin
+  name: headlamp-superuser
   namespace: kube-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: headlamp-admin
+  name: headlamp-superuser
 subjects:
   - kind: ServiceAccount
-    name: headlamp-admin
+    name: headlamp-superuser
     namespace: kube-system
 roleRef:
   kind: ClusterRole
@@ -20,8 +20,8 @@ roleRef:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: headlamp-admin-token
+  name: headlamp-superuser-token
   namespace: kube-system
   annotations:
-    kubernetes.io/service-account.name: headlamp-admin
+    kubernetes.io/service-account.name: headlamp-superuser
 type: kubernetes.io/service-account-token
