--- a/infrastructure/headlamp.yaml
+++ b/infrastructure/headlamp.yaml
@@ -22,7 +22,7 @@ spec:
           accessMode: ReadWriteOnce
   destination:
     server: https://kubernetes.default.svc
-    namespace: kube-system
+    namespace: headlamp
   syncPolicy:
     automated:
       prune: true
