--- a/manifests/headlamp/admin-user.yaml
+++ b/manifests/headlamp/admin-user.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: headlamp-superuser
-  namespace: kube-system
+  namespace: headlamp
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -11,7 +11,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: headlamp-superuser
-    namespace: kube-system
+    namespace: headlamp
 roleRef:
   kind: ClusterRole
   name: cluster-admin
@@ -21,7 +21,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: headlamp-superuser-token
-  namespace: kube-system
+  namespace: headlamp
   annotations:
     kubernetes.io/service-account.name: headlamp-superuser
 type: kubernetes.io/service-account-token
