upd; turnoff metric

--- a/infrastructure/traefik.yaml
+++ b/infrastructure/traefik.yaml
@@ -16,6 +16,8 @@ spec:
         deployment:
           kind: Deployment
           replicas: 1
+        ports:
+          metrics: null
         metrics:
           prometheus:
             enabled: false
