--- a/infrastructure/headlamp.yaml
+++ b/infrastructure/headlamp.yaml
@@ -1,31 +1,31 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: headlamp
-  namespace: argocd
-spec:
-  project: default
-  source:
-    repoURL: https://github.com/headlamp-k8s/headlamp.git
-    path: charts/headlamp
-    targetRevision: main
-    helm:
-      values: |
-        ingress:
-          enabled: false
-        service:
-          type: ClusterIP
-        persistentVolume:
-          enabled: true
-          size: 1Gi
-          storageClass: local-path
-          accessMode: ReadWriteOnce
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: headlamp
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: headlamp
+#   namespace: argocd
+# spec:
+#   project: default
+#   source:
+#     repoURL: https://github.com/headlamp-k8s/headlamp.git
+#     path: charts/headlamp
+#     targetRevision: main
+#     helm:
+#       values: |
+#         ingress:
+#           enabled: false
+#         service:
+#           type: ClusterIP
+#         persistentVolume:
+#           enabled: true
+#           size: 1Gi
+#           storageClass: local-path
+#           accessMode: ReadWriteOnce
+#   destination:
+#     server: https://kubernetes.default.svc
+#     namespace: headlamp
+#   syncPolicy:
+#     automated:
+#       prune: true
+#       selfHeal: true
+#     syncOptions:
+#       - CreateNamespace=true
