--- a/manifests/headlamp/ingress.yaml
+++ b/manifests/headlamp/ingress.yaml
@@ -1,46 +1,46 @@
-apiVersion: traefik.io/v1alpha1
-kind: Middleware
-metadata:
-  name: headlamp-redirect-https
-  namespace: headlamp
-spec:
-  redirectScheme:
-    scheme: https
-    permanent: true
+# apiVersion: traefik.io/v1alpha1
+# kind: Middleware
+# metadata:
+#   name: headlamp-redirect-https
+#   namespace: headlamp
+# spec:
+#   redirectScheme:
+#     scheme: https
+#     permanent: true
 
----
-apiVersion: traefik.io/v1alpha1
-kind: IngressRoute
-metadata:
-  name: headlamp-http
-  namespace: headlamp
-spec:
-  entryPoints:
-    - web
-  routes:
-    - match: Host(`headlamp.sangtd.duckdns.org`)
-      kind: Rule
-      services:
-        - name: headlamp
-          port: 80
-      middlewares:
-        - name: headlamp-redirect-https
-          namespace: headlamp
+# ---
+# apiVersion: traefik.io/v1alpha1
+# kind: IngressRoute
+# metadata:
+#   name: headlamp-http
+#   namespace: headlamp
+# spec:
+#   entryPoints:
+#     - web
+#   routes:
+#     - match: Host(`headlamp.sangtd.duckdns.org`)
+#       kind: Rule
+#       services:
+#         - name: headlamp
+#           port: 80
+#       middlewares:
+#         - name: headlamp-redirect-https
+#           namespace: headlamp
 
----
-apiVersion: traefik.io/v1alpha1
-kind: IngressRoute
-metadata:
-  name: headlamp-https
-  namespace: headlamp
-spec:
-  entryPoints:
-    - websecure
-  routes:
-    - match: Host(`headlamp.sangtd.duckdns.org`)
-      kind: Rule
-      services:
-        - name: headlamp
-          port: 80
-  tls:
-    certResolver: myresolver
+# ---
+# apiVersion: traefik.io/v1alpha1
+# kind: IngressRoute
+# metadata:
+#   name: headlamp-https
+#   namespace: headlamp
+# spec:
+#   entryPoints:
+#     - websecure
+#   routes:
+#     - match: Host(`headlamp.sangtd.duckdns.org`)
+#       kind: Rule
+#       services:
+#         - name: headlamp
+#           port: 80
+#   tls:
+#     certResolver: myresolver
