--- a/manifests/argocd-network/middleware.yaml
+++ b/manifests/argocd-network/middleware.yaml
@@ -1,9 +1,26 @@
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
-  name: https-redirect
+  name: netbird-only
   namespace: argocd
 spec:
-  redirectScheme:
-    scheme: https
-    permanent: true
+  ipWhiteList:
+    sourceRange:
+      - 100.64.0.0/10
+# ---
+# apiVersion: traefik.io/v1alpha1
+# kind: IngressRoute
+# metadata:
+#   name: argocd-server-internal
+#   namespace: argocd
+# spec:
+#   entryPoints:
+#     - web
+#   routes:
+#     - match: Host(`100.65.51.248`)
+#       kind: Rule
+#       middlewares:
+#         - name: netbird-only
+#       services:
+#         - name: argocd-server
+#           port: 80
