add; websecu for argocd

--- a/manifests/argocd-network/ingress.yaml
+++ b/manifests/argocd-network/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   entryPoints:
     - web
+    - websecure
   routes:
     - match: Host(`100.65.51.248`) || Host(`argocd.local`)
       kind: Rule
@@ -13,3 +14,4 @@ spec:
         - name: argocd-server
           port: 443
           serversTransport: skip-tls-verify
+  tls: {}
