--- a/manifests/argocd-network/ingress.yaml
+++ b/manifests/argocd-network/ingress.yaml
@@ -9,8 +9,15 @@ spec:
   routes:
     - match: Host(`100.65.51.248`) || Host(`argocd.local`)
       kind: Rule
-      # middlewares:
-      #   - name: netbird-only
       services:
         - name: argocd-server
-          port: 80
+          port: 443
+          serversTransport: skip-tls-verify
+---
+apiVersion: traefik.io/v1alpha1
+kind: ServersTransport
+metadata:
+  name: skip-tls-verify
+  namespace: argocd
+spec:
+  insecureSkipVerify: true
