--- a/manifests/argocd-network/ingress.yaml
+++ b/manifests/argocd-network/ingress.yaml
@@ -12,7 +12,7 @@ spec:
       services:
         - name: argocd-server
           port: 443
-          serversTransport: argocd-skip-tls-verify
+          serversTransport: skip-tls-verify
 ---
 apiVersion: traefik.io/v1alpha1
 kind: ServersTransport
