upd; rebase gitops

--- a/apps/infrastructure/traefik.yaml
+++ b/apps/infrastructure/traefik.yaml
@@ -1,18 +1,23 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: infrastructure-root
+  name: traefik
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
     repoURL: https://github.com/sangtd05/gitops-repo.git
     targetRevision: main
-    path: apps/infrastructure
+    path: resources/traefik
+
   destination:
     server: https://kubernetes.default.svc
-    namespace: argocd
+    namespace: kube-system
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
