--- a/apps/infrastructure/headlamp.yaml
+++ b/apps/infrastructure/headlamp.yaml
@@ -1,14 +1,14 @@
 # apiVersion: argoproj.io/v1alpha1
 # kind: Application
 # metadata:
-#   name: headlamp-config
+#   name: headlamp
 #   namespace: argocd
 # spec:
 #   project: default
 #   source:
 #     repoURL: https://github.com/sangtd05/gitops-repo.git
 #     targetRevision: main
-#     path: manifests/headlamp
+#     path: resources/headlamp
 #   destination:
 #     server: https://kubernetes.default.svc
 #     namespace: headlamp
