--- a/resources/headlamp/templates/admin-user.yaml
+++ b/resources/headlamp/templates/admin-user.yaml
@@ -1,27 +1,27 @@
-# apiVersion: v1
-# kind: ServiceAccount
-# metadata:
-#   name: headlamp-superuser
-#   namespace: headlamp
-# ---
-# apiVersion: rbac.authorization.k8s.io/v1
-# kind: ClusterRoleBinding
-# metadata:
-#   name: headlamp-superuser
-# subjects:
-#   - kind: ServiceAccount
-#     name: headlamp-superuser
-#     namespace: headlamp
-# roleRef:
-#   kind: ClusterRole
-#   name: cluster-admin
-#   apiGroup: rbac.authorization.k8s.io
-# ---
-# apiVersion: v1
-# kind: Secret
-# metadata:
-#   name: headlamp-superuser-token
-#   namespace: headlamp
-#   annotations:
-#     kubernetes.io/service-account.name: headlamp-superuser
-# type: kubernetes.io/service-account-token
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: headlamp-superuser
+  namespace: headlamp
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: headlamp-superuser
+subjects:
+  - kind: ServiceAccount
+    name: headlamp-superuser
+    namespace: headlamp
+roleRef:
+  kind: ClusterRole
+  name: cluster-admin
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: headlamp-superuser-token
+  namespace: headlamp
+  annotations:
+    kubernetes.io/service-account.name: headlamp-superuser
+type: kubernetes.io/service-account-token
