--- a/apps/infrastructure/headlamp.yaml
+++ b/apps/infrastructure/headlamp.yaml
@@ -1,20 +1,20 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: headlamp
-  namespace: argocd
-spec:
-  project: default
-  source:
-    repoURL: https://github.com/sangtd05/gitops-repo.git
-    targetRevision: main
-    path: resources/headlamp
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: headlamp
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: headlamp
+#   namespace: argocd
+# spec:
+#   project: default
+#   source:
+#     repoURL: https://github.com/sangtd05/gitops-repo.git
+#     targetRevision: main
+#     path: resources/headlamp
+#   destination:
+#     server: https://kubernetes.default.svc
+#     namespace: headlamp
+#   syncPolicy:
+#     automated:
+#       prune: true
+#       selfHeal: true
+#     syncOptions:
+#       - CreateNamespace=true
