manual run policy check

--- a/.github/workflows/policy-check.yaml
+++ b/.github/workflows/policy-check.yaml
@@ -1,11 +1,13 @@
 name: Policy Check
 
 on:
+  workflow_dispatch:
   pull_request:
     branches:
       - main
     paths:
       - 'resources/**'
+      - '.github/workflows/**'
 
 jobs:
   kyverno-check:
