--- a/.github/workflows/policy-check.yaml
+++ b/.github/workflows/policy-check.yaml
@@ -35,5 +35,4 @@ jobs:
       - name: Apply Policy Check
         run: |
           echo "Checking policies against resources..."
-          # Apply policies in resources/policies against rendered manifests
-          kyverno apply resources/policies --resource rendered-manifests/all.yaml --policy-report=true --detailed-results=true
+          kyverno apply resources/policies --resource rendered-manifests/all.yaml --policy-report=true --detailed-results=true --audit-warn --warn-exit-code 0
