fix(kyverno): exclude system namespaces from resource limits policy

--- a/resources/policies/require-resource-limits.yaml
+++ b/resources/policies/require-resource-limits.yaml
@@ -19,6 +19,14 @@ spec:
           - resources:
               kinds:
                 - Pod
+      exclude:
+        any:
+          - resources:
+              namespaces:
+                - kube-system
+                - argocd
+                - kyverno
+                - monitoring
       validate:
         message: "Pod này thiếu Resource Limit. Vui lòng bổ sung resources.limits để có thể triển khai."
         pattern:
