--- a/resources/headlamp/templates/ingress.yaml
+++ b/resources/headlamp/templates/ingress.yaml
@@ -18,7 +18,7 @@ spec:
   entryPoints:
     - web
   routes:
-    - match: Host(`100.65.51.248`)
+    - match: Host(`100.65.51.248`) && PathPrefix(`/headlamp`)
       kind: Rule
       services:
         - name: headlamp
