--- a/resources/argocd-network/ingress.yaml
+++ b/resources/argocd-network/ingress.yaml
@@ -1,17 +1,49 @@
 apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: argocd-redirect-https
+  namespace: argocd
+spec:
+  redirectScheme:
+    scheme: https
+    permanent: true
+
+---
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: argocd-server-internal
+  name: argocd-server-http
   namespace: argocd
 spec:
   entryPoints:
     - web
   routes:
-    - match: (Host(`100.65.51.248`) || Host(`argocd.local`)) && PathPrefix(`/argocd`)
+    - match: Host(`argo.sangtd.duckdns.org`)
+      kind: Rule
+      middlewares:
+        - name: argocd-redirect-https
+      services:
+        - name: argocd-server
+          port: 80
+
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
+  name: argocd-server-https
+  namespace: argocd
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - match: Host(`argo.sangtd.duckdns.org`)
       kind: Rule
       services:
         - name: argocd-server
           port: 80
+  tls:
+    certResolver: myresolver
+
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -23,4 +55,3 @@ metadata:
     app.kubernetes.io/part-of: argocd
 data:
   server.insecure: "true"
-  server.rootpath: "/argocd"
