--- a/resources/traefik/values.yaml
+++ b/resources/traefik/values.yaml
@@ -2,6 +2,13 @@ traefik:
   deployment:
     kind: Deployment
     replicas: 1
+    resources:
+      requests:
+        cpu: 100m
+        memory: 128Mi
+      limits:
+        cpu: 500m
+        memory: 256Mi
   hostNetwork: true
   ports:
     metrics:
