--- a/resources/traefik/values.yaml
+++ b/resources/traefik/values.yaml
@@ -11,18 +11,8 @@ traefik:
         memory: 256Mi
   hostNetwork: true
   ports:
-    metrics:
-      port: 9101
-      expose:
-        default: false
-      exposedPort: 9101
-      protocol: TCP
-    traefik:
-      port: 8080
-      expose:
-        default: false
-      exposedPort: 8080
-      protocol: TCP
+    metrics: null
+    traefik: null
     web:
       port: 80
       hostPort: 80
